<package>
  <name>orb_slam_saveload</name>
  <version>0.0.0</version>
  <description>ORB_SLAM2_saveload</description>

  <maintainer email="xxx@abc.com">xxx</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf2</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf2</run_depend>
  <author>Raul Mur-Artal</author>
  <license>GPLv3</license>


</package>



